--- a/css/general.less
+++ b/css/general.less
@@ -6,7 +6,7 @@ body {
   height: 92%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   &.nice{
-    background-image: url("./images/furley_bg.png");
+    background-image: url("http://rodcoerp.herokuapp.com/images/furley_bg.png");
   }
 }
 
