--- a/css/components/header.less
+++ b/css/components/header.less
@@ -7,7 +7,7 @@ header{
   .navbar .brand {
     padding-top: 0px;
     padding-bottom: 0px;
-    background-image: url("http://rodcoerp.herokuapp.com/images/logo_horizontal_white_on_black.png");
+    background-image: url("/images/logo_horizontal_white_on_black.png");
     height:50px;
     width: 80px;
   }
