--- a/public/bootstrap.css
+++ b/public/bootstrap.css
@@ -7163,7 +7163,7 @@ header .status_button_label {
 header .navbar .brand {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-image: url("http://rodcoerp.herokuapp.com/images/logo_horizontal_white_on_black.png");
+  background-image: url("/images/logo_horizontal_white_on_black.png");
   height: 50px;
   width: 80px;
 }
@@ -7521,7 +7521,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body.nice {
-  background-image: url("http://rodcoerp.herokuapp.com/images/furley_bg.png");
+  background-image: url("/images/furley_bg.png");
 }
 .app {
   padding-bottom: 100px;
