--- a/views/app.jade
+++ b/views/app.jade
@@ -2,5 +2,8 @@
 header
 
 .appCanvas.container
+  .progress.progress-striped.loader.active
+    .bar(style="width: 100%;margin-top: 150px;")>UN MOMENTO, TERMINANDO DE CARGAR...
+
 
 .lightboxCanvas
