--- a/views/layout.jade
+++ b/views/layout.jade
@@ -57,15 +57,10 @@ else
 
       });
 
-    script(type='text/javascript', charset='utf-8').
-      var _kmq = _kmq || [];
-      function _kms(u){
-        setTimeout(function(){
-        var s = document.createElement('script'); var f = document.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true;
-        s.src = u; f.parentNode.insertBefore(s, f);
-        }, 1);
-      }
-      _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/b0b576ce3460c968aed2e8552a157956ef979f63.1.js');
 
   body.nice
     != body
+    
+    a(href="http://mixpanel.com/f/partner")
+      img(src="http://mixpanel.com/site_media/images/partner/badge_blue.png",alt="Real Time Web Analytics")
+      
