--- a/views/layout.jade
+++ b/views/layout.jade
@@ -54,8 +54,8 @@ else
         var ErrorManager = require("managers/errorManager");
 
         var pusherKey = "#{pusherKey}";
-
-        var server= "http://api2s.heroku.com";
+          //var server= "http://127.0.0.1:9393";
+        var server= "http://rodco-api2.heroku.com";
        // var server= "http://localhost:9393";
         
         var instance_url = "https://cs11.salesforce.com";
