--- a/views/layout.jade
+++ b/views/layout.jade
@@ -54,12 +54,14 @@ else
         var ErrorManager = require("managers/errorManager");
 
         var pusherKey = "#{pusherKey}";
+        var statApi = "7fe222080e1ae26d9f89ba1ba8f320b2";
+        
         //var server= "http://127.0.0.1:9393";
         var server= "http://rodco-api2.heroku.com";
        // var server= "http://localhost:9393";
         
         var instance_url = "https://cs11.salesforce.com";
-        exports.app =  new App({ el: $(".appCanvas") , options: { salesforceSession: null , server: server , pusherKey: pusherKey} });
+        exports.app =  new App({ el: $(".appCanvas") , options: {statApi: statApi , salesforceSession: null , server: server , pusherKey: pusherKey} });
 
         window.onerror = function (msg, url, num) {
           ErrorManager.logError(msg)
