--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,7 +18,7 @@ else
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     
-    link(rel='stylesheet', href='/bootstrap.css', type='text/css', charset='utf-8')
+    link(rel='stylesheet', href='/application.css', type='text/css', charset='utf-8')
 
     title Rodco S.A. || ERP
     link(rel='apple-touch-icon', href='apple-touch-icon.png')
