--- a/css/general.less
+++ b/css/general.less
@@ -6,6 +6,7 @@ body {
   height: 92%;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   background-image: url("/images/furley_bg.png");
+  padding-top: 60px;
 }
 
 .app{
