--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,7 +30,7 @@ else
     //if lt IE 9
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   
-    //script(src="http://js.pusher.com/1.11/pusher.min.js")
+    script(src="http://js.pusher.com/1.11/pusher.min.js")
     
     script(src='/application.js', type='text/javascript', charset='utf-8')
 
