ui changes and info on pedidos

--- a/css/general.less
+++ b/css/general.less
@@ -21,6 +21,16 @@ a {
   width: 90%;
 }
 
+.popover{
+  hr{
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  table{
+    font-size: 11px;
+  }
+}
+
 
 h5.preHeader {
   color: #333;
@@ -65,4 +75,7 @@ table{
   }
 }
 
+td.center{
+  text-align: center;
+}
 
