--- a/public/application.css
+++ b/public/application.css
@@ -333,16 +333,14 @@ table .span21{float:none;width:1644px;margin-left:0;float:none;width:1644px;marg
 table .span22{float:none;width:1724px;margin-left:0;float:none;width:1724px;margin-left:0;}
 table .span23{float:none;width:1804px;margin-left:0;float:none;width:1804px;margin-left:0;}
 table .span24{float:none;width:1884px;margin-left:0;float:none;width:1884px;margin-left:0;}
-@font-face{font-family:'FontAwesome';src:url('./font/fontawesome-webfont.eot');src:url('./font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),url('./font/fontawesome-webfont.woff') format('woff'),url('./font/fontawesome-webfont.ttf') format('truetype'),url('./font/fontawesome-webfont.svgz#FontAwesomeRegular') format('svg'),url('./font/fontawesome-webfont.svg#FontAwesomeRegular') format('svg');font-weight:normal;font-style:normal;}[class^="icon-"],[class*=" icon-"]{display:inline;width:auto;height:auto;line-height:inherit;vertical-align:baseline;background-image:none;background-position:0% 0%;background-repeat:repeat;}
-li[class^="icon-"],li[class*=" icon-"]{display:block;}
-[class^="icon-"]:before,[class*=" icon-"]:before{font-family:FontAwesome;font-weight:normal;font-style:normal;display:inline-block;text-decoration:inherit;}
+@font-face{font-family:'FontAwesome';src:url('../font/fontawesome-webfont.eot');src:url('../font/fontawesome-webfont.eot?#iefix') format('embedded-opentype'),url('../font/fontawesome-webfont.woff') format('woff'),url('../font/fontawesome-webfont.ttf') format('truetype'),url('../font/fontawesome-webfont.svg#FontAwesome') format('svg');font-weight:normal;font-style:normal;}[class^="icon-"]:before,[class*=" icon-"]:before{font-family:FontAwesome;font-weight:normal;font-style:normal;display:inline-block;text-decoration:inherit;}
 a [class^="icon-"],a [class*=" icon-"]{display:inline-block;text-decoration:inherit;}
-.icon-large:before{vertical-align:top;font-size:1.3333333333333333em;}
-.btn [class^="icon-"],.btn [class*=" icon-"]{line-height:.9em;}
+.icon-large:before{vertical-align:middle;font-size:1.3333333333333333em;}
+.btn [class^="icon-"],.nav-tabs [class^="icon-"],.btn [class*=" icon-"],.nav-tabs [class*=" icon-"]{line-height:.9em;}
 li [class^="icon-"],li [class*=" icon-"]{display:inline-block;width:1.25em;text-align:center;}
-li .icon-large[class^="icon-"],li .icon-large[class*=" icon-"]{width:1.875em;}
-li[class^="icon-"],li[class*=" icon-"]{margin-left:0;list-style-type:none;}li[class^="icon-"]:before,li[class*=" icon-"]:before{text-indent:-2em;text-align:center;}
-li[class^="icon-"].icon-large:before,li[class*=" icon-"].icon-large:before{text-indent:-1.3333333333333333em;}
+li .icon-large:before,li .icon-large:before{width:1.875em;}
+ul.icons{list-style-type:none;margin-left:2em;text-indent:-0.8em;}ul.icons li [class^="icon-"],ul.icons li [class*=" icon-"]{width:.8em;}
+ul.icons li .icon-large:before,ul.icons li .icon-large:before{vertical-align:initial;}
 .icon-glass:before{content:"\f000";}
 .icon-music:before{content:"\f001";}
 .icon-search:before{content:"\f002";}
@@ -483,6 +481,76 @@ li[class^="icon-"].icon-large:before,li[class*=" icon-"].icon-large:before{text-
 .icon-github-sign:before{content:"\f092";}
 .icon-upload-alt:before{content:"\f093";}
 .icon-lemon:before{content:"\f094";}
+.icon-phone:before{content:"\f095";}
+.icon-check-empty:before{content:"\f096";}
+.icon-bookmark-empty:before{content:"\f097";}
+.icon-phone-sign:before{content:"\f098";}
+.icon-twitter:before{content:"\f099";}
+.icon-facebook:before{content:"\f09a";}
+.icon-github:before{content:"\f09b";}
+.icon-unlock:before{content:"\f09c";}
+.icon-credit-card:before{content:"\f09d";}
+.icon-rss:before{content:"\f09e";}
+.icon-hdd:before{content:"\f0a0";}
+.icon-bullhorn:before{content:"\f0a1";}
+.icon-bell:before{content:"\f0a2";}
+.icon-certificate:before{content:"\f0a3";}
+.icon-hand-right:before{content:"\f0a4";}
+.icon-hand-left:before{content:"\f0a5";}
+.icon-hand-up:before{content:"\f0a6";}
+.icon-hand-down:before{content:"\f0a7";}
+.icon-circle-arrow-left:before{content:"\f0a8";}
+.icon-circle-arrow-right:before{content:"\f0a9";}
+.icon-circle-arrow-up:before{content:"\f0aa";}
+.icon-circle-arrow-down:before{content:"\f0ab";}
+.icon-globe:before{content:"\f0ac";}
+.icon-wrench:before{content:"\f0ad";}
+.icon-tasks:before{content:"\f0ae";}
+.icon-filter:before{content:"\f0b0";}
+.icon-briefcase:before{content:"\f0b1";}
+.icon-fullscreen:before{content:"\f0b2";}
+.icon-group:before{content:"\f0c0";}
+.icon-link:before{content:"\f0c1";}
+.icon-cloud:before{content:"\f0c2";}
+.icon-beaker:before{content:"\f0c3";}
+.icon-cut:before{content:"\f0c4";}
+.icon-copy:before{content:"\f0c5";}
+.icon-paper-clip:before{content:"\f0c6";}
+.icon-save:before{content:"\f0c7";}
+.icon-sign-blank:before{content:"\f0c8";}
+.icon-reorder:before{content:"\f0c9";}
+.icon-list-ul:before{content:"\f0ca";}
+.icon-list-ol:before{content:"\f0cb";}
+.icon-strikethrough:before{content:"\f0cc";}
+.icon-underline:before{content:"\f0cd";}
+.icon-table:before{content:"\f0ce";}
+.icon-magic:before{content:"\f0d0";}
+.icon-truck:before{content:"\f0d1";}
+.icon-pinterest:before{content:"\f0d2";}
+.icon-pinterest-sign:before{content:"\f0d3";}
+.icon-google-plus-sign:before{content:"\f0d4";}
+.icon-google-plus:before{content:"\f0d5";}
+.icon-money:before{content:"\f0d6";}
+.icon-caret-down:before{content:"\f0d7";}
+.icon-caret-up:before{content:"\f0d8";}
+.icon-caret-left:before{content:"\f0d9";}
+.icon-caret-right:before{content:"\f0da";}
+.icon-columns:before{content:"\f0db";}
+.icon-sort:before{content:"\f0dc";}
+.icon-sort-down:before{content:"\f0dd";}
+.icon-sort-up:before{content:"\f0de";}
+.icon-envelope-alt:before{content:"\f0e0";}
+.icon-linkedin:before{content:"\f0e1";}
+.icon-undo:before{content:"\f0e2";}
+.icon-legal:before{content:"\f0e3";}
+.icon-dashboard:before{content:"\f0e4";}
+.icon-comment-alt:before{content:"\f0e5";}
+.icon-comments-alt:before{content:"\f0e6";}
+.icon-bolt:before{content:"\f0e7";}
+.icon-sitemap:before{content:"\f0e8";}
+.icon-umbrella:before{content:"\f0e9";}
+.icon-paste:before{content:"\f0ea";}
+.icon-user-md:before{content:"\f200";}
 .dropdown{position:relative;}
 .dropdown-toggle{*margin-bottom:-3px;}
 .dropdown-toggle:active,.open .dropdown-toggle{outline:0;}
@@ -924,6 +992,8 @@ body{height:92%;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;backgrou
 .app{padding-bottom:100px;}
 a{cursor:pointer;}
 .validatable{width:90%;}
+.popover hr{margin-top:5px;margin-bottom:5px;}
+.popover table{font-size:11px;}
 h5.preHeader{color:#333;font-size:17px;line-height:12px;}
 .well{margin-top:10px;}
 .hero-unit{-webkit-box-shadow:0 1px 5px #999999;-moz-box-shadow:0 1px 5px #999999;box-shadow:0 1px 5px #999999;-webkit-box-shadow:0 1px 5px #999999;-moz-box-shadow:0 1px 5px #999999;box-shadow:0 1px 5px #999999;}
@@ -931,4 +1001,5 @@ h5.preHeader{color:#333;font-size:17px;line-height:12px;}
 table input{margin-bottom:0px;}
 .pedidos .list_item{opacity:0.5;}.pedidos .list_item.active{opacity:1;}
 .pagos .pago{opacity:0.5;}.pagos .pago.active{opacity:1;}
+td.center{text-align:center;}
 @media (max-width:2100px){body{padding-top:70px;}}@media (max-width:940px){.appCanvas{padding-top:40px;} .toolbar{width:100%;height:45px;position:absolute;border-radius:4px;border-color:#d5d5d5;border-width:0 0 1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#dfdfdf;-webkit-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);-moz-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);z-index:900;} .toolbar .input_wrapper{margin-top:2px;padding-left:10px;width:95%;}}@media print{body{padding-top:0px;background:none;background-color:#fff;} body .navbar,body .action_footer{display:none;}}
