--- a/css/components/menu.less
+++ b/css/components/menu.less
@@ -1,8 +1,47 @@
-.menu{
+.hero-unit{
+  background-color: #fdfdfd;
+}
 
-  a{
-    font-size: 16px;
-    font-weight: 200;
+.menu{
+  background-color: #f4f4f4;
+  background-image: url("/images/furley_bg.png");
+
+  @shadow: inset 0 1px 1px rgba(33,33,33,.1), 0 1px 2px rgba(0,0,0,.2);
+  .box-shadow(@shadow);
+  
+  padding: 10px;
+  .nav-header{
+    color: @blue;
+    padding-left: 4px;
+    i{
+      font-size: 17px;
+    }
+  }
+  li{
+    display: block;
+    text-align: left;
+    margin-bottom: 2px;
+    padding-left: 2px;
+    a{
+        padding: 4px;
+      i{
+        padding-right: 4px;
+        color: lighten(@blue,20);
+        font-size: 16px;
+      }
+      
+      font-size: 14px;
+      font-weight: 200;
+      color: #333;
+      background-color: #fdfdfd;
+      
+      &:hover{
+        background-color: @blue;
+        color: #fff;
+      
+      }
+      
+    }
   }
 
 }
