--- a/views/app.jade
+++ b/views/app.jade
@@ -1,7 +1,7 @@
   
 header
 
-.appCanvas.container
+.appCanvas.container-fluid
   .progress.progress-striped.loader.active
     .bar(style="width: 100%;margin-top: 150px;")>UN MOMENTO, TERMINANDO DE CARGAR...
 
