--- a/css/general.less
+++ b/css/general.less
@@ -132,7 +132,7 @@ td.center{
 }
 
 
-.appCanvas>*>.well{
+.widgetHeader + .well{
   margin-top: 0px;
   background-color: #fff;
   padding: 20px 15px 15px;
@@ -142,5 +142,4 @@ td.center{
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border-image: initial;
-
 }
