changes to loading

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -58,6 +58,7 @@ else
         
         //var server= "http://127.0.0.1:9393";
         var server= "http://rodco-api2.heroku.com";
+        //var server= "http://api2s.heroku.com";
         
         var instance_url = "https://cs11.salesforce.com";
         exports.app =  new App({ el: $(".appCanvas") , options: {statApi: statApi , salesforceSession: null , server: server , pusherKey: pusherKey} });
