fix table print layout

--- a/css/components/print.less
+++ b/css/components/print.less
@@ -6,10 +6,19 @@
     background: none;
     header{
     display: none;
-    }
+  }
     
-    table,tr,td{
+  table,tr,td{
       border: none;
+    }
+  }
+  
+  .table-striped {
+    tbody {
+      tr:nth-child(odd) td,
+      tr:nth-child(odd) th {
+        background-color: none;
+      }
     }
   }
   
