--- a/public/application.css
+++ b/public/application.css
@@ -991,7 +991,7 @@ header .productos_list .thumbnail.disable a{color:#999;}
 .datepicker th.switch{width:145px;}
 .datepicker thead tr:first-child th{cursor:pointer;}.datepicker thead tr:first-child th:hover{background:#eeeeee;}
 .input-append.date .add-on i,.input-prepend.date .add-on i{display:block;cursor:pointer;width:16px;height:16px;}
-@media print{body{margin:0px;padding:0px;max-width:800px;background:none;}body header{display:none;} body table,body tr,body td{border:none;} .hide_print{display:none;} .action_footer,.hide_on_print{display:none;}}html{height:100%;}
+@media print{body{margin:0px;padding:0px;max-width:800px;background:none;}body header{display:none;} body table,body tr,body td{border:none;} .table-striped tbody tr:nth-child(odd) td,.table-striped tbody tr:nth-child(odd) th{background-color:none;} .hide_print{display:none;} .action_footer,.hide_on_print{display:none;}}html{height:100%;}
 body{height:92%;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;background-image:url("/images/furley_bg.png");padding-top:70px;}
 .app{padding-bottom:100px;}
 a{cursor:pointer;}
