remove precio ferretria

--- a/css/general.less
+++ b/css/general.less
@@ -55,6 +55,9 @@ table{
   input{
     margin-bottom: 0px;
   }
+  tr.hidden{
+    display: none;
+  }
 }
 
 .pedidos{
@@ -143,3 +146,5 @@ td.center{
   border-radius: 5px;
   border-image: initial;
 }
+
+
