--- a/public/application.css
+++ b/public/application.css
@@ -1003,6 +1003,7 @@ h5.preHeader{color:#333;font-size:17px;line-height:12px;}
 .hero-unit{-webkit-box-shadow:0 1px 5px #999999;-moz-box-shadow:0 1px 5px #999999;box-shadow:0 1px 5px #999999;-webkit-box-shadow:0 1px 5px #999999;-moz-box-shadow:0 1px 5px #999999;box-shadow:0 1px 5px #999999;}
 .table-total{width:200px;float:right;}
 table input{margin-bottom:0px;}
+table tr.hidden{display:none;}
 .pedidos .well{background-color:#fff;border:1px solid #D5D5D5;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;border-image:initial;}
 .pedidos .list_item{opacity:0.5;}.pedidos .list_item.active{opacity:1;}
 .pagos .pago{opacity:0.5;}.pagos .pago.active{opacity:1;}
