--- a/views/app.jade
+++ b/views/app.jade
@@ -1,9 +1,12 @@
   
 header
 
-.appCanvas.container-fluid
+.productosToolbar
+
+.appCanvas.container
   .progress.progress-striped.loader.active
     .bar(style="width: 100%;margin-top: 150px;")>UN MOMENTO, TERMINANDO DE CARGAR...
 
+footer
 
 .lightboxCanvas
