--- a/css/bootstrap/bootstrap.less
+++ b/css/bootstrap/bootstrap.less
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v2.0.2
+ * Bootstrap v2.0.4
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -27,6 +27,7 @@
 @import "tables.less";
 
 // Components: common
+//@import "sprites.less";
 @import "font-awesome.less";
 @import "dropdowns.less";
 @import "wells.less";
@@ -52,14 +53,11 @@
 
 // Components: Misc
 @import "thumbnails.less";
-@import "labels.less";
-@import "badges.less";
+@import "labels-badges.less";
 @import "progress-bars.less";
 @import "accordion.less";
 @import "carousel.less";
 @import "hero-unit.less";
-
-@import "responsive.less";
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
