--- a/css/components/menu.less
+++ b/css/components/menu.less
@@ -1,47 +1,39 @@
-.hero-unit{
-  background-color: #fdfdfd;
-}
 
 .menu{
-  background-color: #f4f4f4;
-  background-image: url("/images/furley_bg.png");
 
-  @shadow: inset 0 1px 1px rgba(33,33,33,.1), 0 1px 2px rgba(0,0,0,.2);
-  .box-shadow(@shadow);
-  
-  padding: 10px;
-  .nav-header{
-    color: @blue;
-    padding-left: 4px;
-    i{
-      font-size: 17px;
-    }
-  }
+
   li{
-    display: block;
-    text-align: left;
-    margin-bottom: 2px;
-    padding-left: 2px;
-    a{
-        padding: 4px;
-      i{
-        padding-right: 4px;
-        color: lighten(@blue,20);
-        font-size: 16px;
+    border: none;
+    height: 100px;
+    width: 120px;
+    text-align: center;
+    cursor: pointer;
+    &.header{
+      background-color: #333;
+      color: #fff;
+      h4{
+        padding-top: 40px;
+        font-weight: 200;
       }
-      
-      font-size: 14px;
-      font-weight: 200;
-      color: #333;
-      background-color: #fdfdfd;
-      
-      &:hover{
-        background-color: @blue;
-        color: #fff;
-      
-      }
-      
     }
+    i{
+      font-size: 30px;
+      color: #454545;
+    }
+    span{
+      font-size: 18px;
+      font-weight: 200;
+      display: block;
+      max-width: 100px;
+    }
+   
+    &:hover{
+      >* {
+      color: @red;
+     }
+    }
+   
   }
+
 
 }
