--- a/css/bootstrap/font-awesome.less
+++ b/css/bootstrap/font-awesome.less
@@ -97,7 +97,6 @@ ul.icons {
   }
 }
 
-
 /*  Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
     readers do not read off random characters that represent icons */
 .icon-glass:before                { content: "\f000"; }
@@ -132,7 +131,7 @@ ul.icons {
 .icon-play-circle:before          { content: "\f01d"; }
 .icon-repeat:before               { content: "\f01e"; }
 
-/* \f020 doesn't work in Safari. all shifted one down */
+/* \f020 is not a valid unicode character. all shifted one down */
 .icon-refresh:before              { content: "\f021"; }
 .icon-list-alt:before             { content: "\f022"; }
 .icon-lock:before                 { content: "\f023"; }
@@ -325,4 +324,4 @@ ul.icons {
 .icon-umbrella:before             { content: "\f0e9"; }
 .icon-paste:before                { content: "\f0ea"; }
 
-.icon-user-md:b
+.icon-user-md:before              { content: "\f200"; }
