remove ipad highlight on select

--- a/css/components/productos.less
+++ b/css/components/productos.less
@@ -1,5 +1,6 @@
 .productosToolbar{
 
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
   position: fixed;
   top: 59px;
   left: 0px;
@@ -19,6 +20,7 @@
 
   .container{
     position: relative;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
     
     .options{
       position: absolute;
