fixed layout in multiple apps

--- a/css/components/actionFooter.less
+++ b/css/components/actionFooter.less
@@ -1,13 +1,8 @@
 .action_footer{
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  padding: 0px;
-  z-index: 1040;
 
   .modal-footer{
     padding: 8px;
+    border: 1px solid #ddd;
   }
 
   .save,.send{
