--- a/css/general.less
+++ b/css/general.less
@@ -145,6 +145,7 @@ td.center{
 
 .widgetHeader + .well{
   margin-top: 0px;
+  margin-bottom: 0px;
   background-color: #fff;
   padding: 20px 15px 15px;
   background: white;
