--- a/css/components/productos.less
+++ b/css/components/productos.less
@@ -14,7 +14,7 @@
  
   
   &.closed{
-    max-height: 30px;  
+    max-height: 33px;  
     .box-shadow(0 0 0);
   }
 
@@ -24,8 +24,8 @@
     
     .options{
       position: absolute;
-      right: 0px;
-      top: 5px;
+      right: -9px;
+      top: 7px;
       i{
         display: inline-block;
         margin-right: 10px;
@@ -42,16 +42,16 @@
 
   .familias_list{
     margin: 0px;
-    padding-right: 20px;
-    height: 30px;
+    padding-right: 30px;
+    height: 34px;
     
     overflow: hidden;
     .badge{
       cursor: pointer;
-      margin: 5px;
+      margin: 6px 4px;
       background-color: #efefef;
       color: @red;
-      padding: 4px 12px 4px;
+      padding: 6px 13px 6px;
       text-shadow: 0 0 0;
       font-size: 13px;
       &:hover,&.active{
