--- a/css/index.less
+++ b/css/index.less
@@ -3,6 +3,7 @@
 @import "./components/popupSelect.less";
 @import "./components/menu.less";
 @import "./components/header.less";
+@import "./components/footer.less";
 @import "./components/productos.less";
 @import "./components/actionFooter.less";
 @import "./components/datePicker.less";
