--- a/css/components/header.less
+++ b/css/components/header.less
@@ -31,10 +31,14 @@ header{
     color: #fff;
     text-shadow: 0 1px 1px rgba(33,33,33,.65);
     vertical-align: baseline;
-    i{
+    .home{
       vertical-align: top;
-      font-size: 20px;
-      color: @red;
+      padding: 5px;
+      i{
+        vertical-align: top;
+        font-size: 23px;
+        color: @red;
+      }
     }
     .first{
       color: @red;
