add estado cuenta

--- a/css/components/print.less
+++ b/css/components/print.less
@@ -4,15 +4,11 @@
     padding: 0px;
     max-width: 800px;
     background: none;
-    header{
-    display: none;
-  }
-    
-  table,tr,td{
-      border: none;
+    header,footer{
+      display: none;
     }
   }
-  
+
   .table-striped {
     tbody {
       tr:nth-child(odd) td,
@@ -26,7 +22,7 @@
     display:none;
   }
   
-  .action_footer , .hide_on_print{
+  .action_footer , .hide_on_print {
     display: none;
   }
   
