--- a/views/app.jade
+++ b/views/app.jade
@@ -1,7 +1,7 @@
   
 header
 
-.productosToolbar
+.productosToolbar.hide_on_print
 
 .appCanvas.container
   .progress.progress-striped.loader.active
