--- a/css/components/header.less
+++ b/css/components/header.less
@@ -37,11 +37,11 @@ header{
       i{
         vertical-align: top;
         font-size: 23px;
-        color: @red;
+        color: @blueDark;
       }
     }
     .first{
-      color: @red;
+      color: @blueDark;
       font-size: 60px;
       font-weight: 800;
       line-height: 30px;
