--- a/css/components/menu.less
+++ b/css/components/menu.less
@@ -17,7 +17,7 @@
     
     &:hover{
       >* {
-      color: @red;
+      color: @blue;
      }
     }
     
@@ -33,9 +33,11 @@
     }
     
     &.header{
-      background-color: #333;
+      background-color: #555;
+      border: 4px solid @blue;
       color: #fff;
       height: 50px;
+      .border-radius(15px);
       h4{
         padding-top: 17px;
         font-weight: 200;
