--- a/css/index.less
+++ b/css/index.less
@@ -7,6 +7,7 @@
 @import "./components/productos.less";
 @import "./components/actionFooter.less";
 @import "./components/datePicker.less";
+@import "./components/printHeader.less";
 @import "./components/print.less";
 @import "./general.less";
 @import "./responsive.less";
