--- a/public/application.css
+++ b/public/application.css
@@ -811,16 +811,16 @@ i.modal_success{font-size:40px;color:#46a546;}
 .proveedores .proveedores_list li.active a{color:#fff;}
 .proveedores .proveedores_list li a{text-transform:capitalize;}
 .menu .thumbnails{margin-right:20px;}
-.menu li{border:none;height:100px;width:120px;text-align:center;cursor:pointer;}.menu li:hover>*{color:#9d261d;}
+.menu li{border:none;height:100px;width:120px;text-align:center;cursor:pointer;}.menu li:hover>*{color:#049cdb;}
 .menu li i{font-size:30px;color:#454545;}
 .menu li span{font-size:18px;font-weight:200;display:block;max-width:100px;}
-.menu li.header{background-color:#333;color:#fff;height:50px;}.menu li.header h4{padding-top:17px;font-weight:200;}
+.menu li.header{background-color:#555;border:4px solid #049cdb;color:#fff;height:50px;-webkit-border-radius:15px;-moz-border-radius:15px;border-radius:15px;}.menu li.header h4{padding-top:17px;font-weight:200;}
 .menu li.header:hover h4{color:#fff;}
 header .navbar-inner{padding:4px 0px;background-image:url("/images/furley_bg.png");}
 header .headerWrapper{text-align:center;}header .headerWrapper input{margin-top:13px;color:#0064cd;margin-top:5px;background-color:#fff;display:inline-block;padding:8px 13px;-webkit-border-radius:25px;-moz-border-radius:25px;border-radius:25px;}
 header .productIcon{font-size:25px;vertical-align:middle;color:#666;margin-right:5%;}
-header .navbar .brand{padding:0px;font-size:50px;color:#fff;text-shadow:0 1px 1px rgba(33, 33, 33, 0.65);vertical-align:baseline;}header .navbar .brand .home{vertical-align:top;padding:5px;}header .navbar .brand .home i{vertical-align:top;font-size:23px;color:#9d261d;}
-header .navbar .brand .first{color:#9d261d;font-size:60px;font-weight:800;line-height:30px;}
+header .navbar .brand{padding:0px;font-size:50px;color:#fff;text-shadow:0 1px 1px rgba(33, 33, 33, 0.65);vertical-align:baseline;}header .navbar .brand .home{vertical-align:top;padding:5px;}header .navbar .brand .home i{vertical-align:top;font-size:23px;color:#0064cd;}
+header .navbar .brand .first{color:#0064cd;font-size:60px;font-weight:800;line-height:30px;}
 header .navbar .brand .version{font-size:12px;color:#999;}
 header .actionButtons{padding-top:10px;}header .actionButtons a{color:#999;display:inline-block;margin:5px 7px;}header .actionButtons a:hover{color:#9d261d;text-decoration:none;}
 header .actionButtons a i{font-size:20px;}
@@ -834,12 +834,12 @@ footer .navbar-inner .nav .dropdown .userWrapper{max-height:350px;width:200px;ov
 footer .navbar-inner .nav .dropdown .currentUser img{width:25px;height:25px;}
 footer .navbar-inner .nav .dropdown .users li img{width:25px;height:25px;}
 footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-size:30px;}
-.productosToolbar{-webkit-tap-highlight-color:rgba(0, 0, 0, 0);position:fixed;top:59px;left:0px;right:0px;z-index:1100;background-color:#fff;max-height:250px;overflow-y:hidden;-webkit-box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);-moz-box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);}.productosToolbar.closed{max-height:33px;-webkit-box-shadow:0 0 0;-moz-box-shadow:0 0 0;box-shadow:0 0 0;}
-.productosToolbar .container{position:relative;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}.productosToolbar .container .options{position:absolute;right:-9px;top:7px;}.productosToolbar .container .options span{padding:4px;text-align:center;}.productosToolbar .container .options span:hover{color:#9d261d;}
-.productosToolbar .container .options span i{font-size:25px;display:inline-block;margin-right:10px;}.productosToolbar .container .options span i.active{color:#9d261d;opacity:1;}
-.productosToolbar .familias_list{margin:0px;padding-right:30px;height:34px;overflow:hidden;}.productosToolbar .familias_list .badge{cursor:pointer;margin:6px 4px;background-color:#efefef;color:#9d261d;padding:6px 13px 6px;text-shadow:0 0 0;font-size:13px;}.productosToolbar .familias_list .badge:hover,.productosToolbar .familias_list .badge.active{background-color:#9d261d;color:#efefef;}
-.productosToolbar .grupos_list{background-color:#fff;max-height:200px;overflow-y:scroll;margin:0px;margin-top:10px;overflow-x:hidden;}.productosToolbar .grupos_list .badge{text-shadow:0 0 0;cursor:pointer;font-size:14px;margin:5px;-webkit-border-radius:15px 0px 15px 15px;-moz-border-radius:15px 0px 15px 15px;border-radius:15px 0px 15px 15px;background-color:#efefef;color:#9d261d;padding:9px;border:1px dotted #fff;}.productosToolbar .grupos_list .badge:hover{border:1px solid #9d261d;}
-.productosToolbar .grupos_list .badge.active{background-color:#9d261d;color:#efefef;}
+.productosToolbar{-webkit-tap-highlight-color:rgba(0, 0, 0, 0);position:fixed;top:59px;left:0px;right:0px;z-index:1100;background-color:#fff;max-height:250px;overflow-y:hidden;-webkit-box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);-moz-box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);box-shadow:0 1px 4px rgba(33, 33, 33, 0.2);}.productosToolbar.closed{max-height:35px;-webkit-box-shadow:0 0 0;-moz-box-shadow:0 0 0;box-shadow:0 0 0;}
+.productosToolbar .container{position:relative;-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}.productosToolbar .container .options{position:absolute;right:-9px;top:7px;}.productosToolbar .container .options span{padding:4px;text-align:center;}.productosToolbar .container .options span:hover{color:#0064cd;}
+.productosToolbar .container .options span i{font-size:25px;display:inline-block;margin-right:10px;}.productosToolbar .container .options span i.active{color:#0064cd;opacity:1;}
+.productosToolbar .familias_list{margin:0px;padding-right:30px;height:35px;overflow:hidden;}.productosToolbar .familias_list .badge{cursor:pointer;margin:6px 4px;color:#0064cd;padding:6px 13px 6px;text-shadow:0 0 0;font-size:13px;border:#efefef 1px solid;background-image:url("/images/furley_bg.png");}.productosToolbar .familias_list .badge:hover,.productosToolbar .familias_list .badge.active{background:none;background-color:#0064cd;color:#ffffff;}
+.productosToolbar .grupos_list{background-color:#fff;max-height:200px;overflow-y:scroll;margin:0px;margin-top:10px;overflow-x:hidden;}.productosToolbar .grupos_list .badge{text-shadow:0 0 0;cursor:pointer;font-size:13px;margin:5px;-webkit-border-radius:15px 0px 15px 15px;-moz-border-radius:15px 0px 15px 15px;border-radius:15px 0px 15px 15px;background-color:#efefef;color:#0064cd;padding:9px;border:1px dotted #fff;}.productosToolbar .grupos_list .badge:hover{border:1px solid #0064cd;}
+.productosToolbar .grupos_list .badge.active{background-color:#0064cd;color:#efefef;}
 .productosToolbar .productosListWrapper{height:190px;overflow-y:scroll;}
 .productosToolbar table{margin-top:10px;background-color:#fff;}
 .productosToolbar .productos_list .name{cursor:pointer;width:80%;font-size:17px;color:#333;font-weight:200;}
@@ -869,7 +869,9 @@ footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-si
 .datepicker th.switch{width:145px;}
 .datepicker thead tr:first-child th{cursor:pointer;}.datepicker thead tr:first-child th:hover{background:#eeeeee;}
 .input-append.date .add-on i,.input-prepend.date .add-on i{display:block;cursor:pointer;width:16px;height:16px;}
-@media print{body{margin:0px;padding:0px;max-width:800px;background:none;}body header{display:none;} body table,body tr,body td{border:none;} .table-striped tbody tr:nth-child(odd) td,.table-striped tbody tr:nth-child(odd) th{background-color:none;} .hide_print{display:none;} .action_footer,.hide_on_print{display:none;}}html{height:100%;}
+.printHeader .table-main td{padding:12px;}
+.printHeader .table-inner{width:100%;}.printHeader .table-inner td{padding:5px 15px;}
+@media print{body{margin:0px;padding:0px;max-width:800px;background:none;}body header,body footer{display:none;} .table-striped tbody tr:nth-child(odd) td,.table-striped tbody tr:nth-child(odd) th{background-color:none;} .hide_print{display:none;} .action_footer,.hide_on_print{display:none;}}html{height:100%;}
 body{font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;padding-top:115px;}body.noScroll{overflow:hidden;height:100%;}
 .container{max-width:940px;}
 .app{padding-bottom:100px;}
